fix(handlers/zalo): fix handler
